# boilit

./: .gitignore  MANIFEST.in  README.md  generatecss.bat  pyproject.toml  requirements.txt  run.py  setup_env.bat  tailwind.config.js
boilit/: app.py
boilit/assets/: tailwind.css
boilit/config/: main.py  project_default.json
boilit/pages/: bopage1.py  bopage2.py  bostart.py
boilit/project/: __init__.py  start.py
boilit/schemas/: input.py
